apps/reloader/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reloader
  namespace: reloader
  labels:
    app.kubernetes.io/name: reloader
    app.kubernetes.io/instance: reloader
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: reloader
  template:
    metadata:
      labels:
        app.kubernetes.io/name: reloader
        app.kubernetes.io/instance: reloader
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: reloader
      containers:
        - name: reloader
          image: harbor.208.haist.farm/sentinel/reloader@sha256:8be45ab8fb69aa1a12cd52bbcf2a8aa7de8e109e9309523187948742054eaafe
          args:
            - --resources-to-ignore=configMaps
          ports:
            - name: http
              containerPort: 9090
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
          livenessProbe:
            tcpSocket:
              port: http
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
          securityContext:
            runAsNonRoot: true
            runAsUser: 65534
